# wrath-addon

./: .gitattributes  .gitignore  .mcp.json  BUG_AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
agents/: wrath-explorer.md  wrath-reviewer.md
docs/: HOOK_CONTRACT.md
hooks/: _bootstrap.py  common.py  drive_pack.py  hooks.json  journal.py  permission_denied.py  policy.py  post_compact.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  project_config.py  session_end.py  session_start.py  set_enabled.py  stop.py  stop_failure.py  subagent_start.py  subagent_stop.py  toggle.py  user_prompt_submit.py
mcp/: launch.cmd  launch.sh  run.py  server.py
rules/: WRATH.md
skills/wrath/: SKILL.md
skills/wrath-budget/: SKILL.md
skills/wrath-check/: SKILL.md
skills/wrath-doctor/: SKILL.md
skills/wrath-il/: LEXICON.md  SKILL.md
skills/wrath-off/: SKILL.md
skills/wrath-on/: SKILL.md
skills/wrath-orchestrate/: SKILL.md
skills/wrath-privacy/: SKILL.md
skills/wrath-profile/: SKILL.md
skills/wrath-review/: SKILL.md
skills/wrath-ship/: SKILL.md
skills/wrath-status/: SKILL.md
skills/wrath-strict/: SKILL.md
skills/wrath-thin/: SKILL.md
skills/wrath-why/: SKILL.md
skills/wrath-yolo/: SKILL.md
src/wrath/: __init__.py  config.py  counters.py  event.py  io.py  state.py  version.py
tests/: conftest.py  test_common.py  test_event.py  test_hooks_cli.py  test_journal.py  test_journal_session.py  test_mcp.py  test_policy.py  test_policy_v2.py  test_project_config.py  test_toggle.py
tests/_data/: journal.jsonl
(+37 files in other folders)
