[project]
name = "wrath-addon"
version = "2.1.0"
description = "Wrath V2 — Grok Build control-plane addon (hooks, policy, journal, MCP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Warexpor" }]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "hooks"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "hooks", "mcp", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
